// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileMainScreenTopBanner should match snapshot for all possible results of settingsBannerToShowSelector: Appearance Settings banner 1`] = `
<View
  style={
    {
      "paddingHorizontal": 24,
    }
  }
>
  <View
    style={
      {
        "height": 16,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={false}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    testID="appearance-settings-banner"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "alignContent": "center",
            "alignItems": "flex-start",
            "borderCurve": "continuous",
            "borderRadius": 8,
            "flexDirection": "row",
            "padding": 16,
          },
          {
            "backgroundColor": "#F4F5F8",
          },
        ]
      }
      nativeID="1"
      style={
        [
          {
            "alignContent": "center",
            "alignItems": "flex-start",
            "borderCurve": "continuous",
            "borderRadius": 8,
            "flexDirection": "row",
            "padding": 16,
          },
          {
            "backgroundColor": "#F4F5F8",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityLabel="Vuoi modificare il carattere usato per i testi in app? Modifica stile carattere"
        accessibilityRole="button"
        accessible={true}
        style={
          {
            "alignSelf": "center",
            "flex": 1,
            "gap": 4,
          }
        }
      >
        <Text
          allowFontScaling={true}
          dynamicTypeRamp="headline"
          maxFontSizeMultiplier={1.5}
          style={
            [
              {},
              {
                "color": "#031344",
                "fontFamily": "Titillio",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "600",
                "lineHeight": 24,
              },
            ]
          }
        >
          Vuoi modificare il carattere usato per i testi in app?
        </Text>
        <View
          accessibilityElementsHidden={true}
          accessibilityLabel="Modifica stile carattere"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          importantForAccessibility="no-hide-descendants"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          pointerEvents="none"
        >
          <View
            style={
              {
                "height": 8,
              }
            }
          />
          <Text
            accessibilityElementsHidden={true}
            accessible={false}
            allowFontScaling={true}
            ellipsizeMode="tail"
            importantForAccessibility="no-hide-descendants"
            maxFontSizeMultiplier={1.5}
            numberOfLines={1}
            style={
              [
                {},
                {
                  "color": "#0B3EE3",
                  "fontFamily": "Titillio",
                  "fontSize": 16,
                  "fontStyle": "normal",
                  "fontWeight": "600",
                  "lineHeight": undefined,
                },
              ]
            }
          >
            Modifica stile carattere
          </Text>
        </View>
      </View>
      <View
        style={
          [
            {
              "marginRight": -16,
            },
            {
              "alignSelf": "center",
            },
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={80}
          bbWidth={80}
          focusable={false}
          height={80}
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 80,
                "width": 80,
              },
            ]
          }
          vbHeight={240}
          vbWidth={240}
          width={80}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              d="M133.94 165.85c-2.88 0-5.61-1.57-7.03-4.28-1.01-1.92-1.2-4.12-.53-6.18.66-2.04 2.07-3.69 3.98-4.64 6.87-3.44 17.93-6.91 24.11-8.73-2.58-2.4-4.34-6.01-4.32-9.54 0-2.68 1.14-9.19 11.43-11.65 16.11-3.86 78.12 18.71 80.75 19.67l-1.37 3.76c-.16-.06-16.14-5.89-33.81-11.18-29.21-8.75-40.4-9.37-44.64-8.36-5.38 1.29-8.35 4.05-8.36 7.77-.01 3.88 3.08 7.55 5.86 8.23.89.22 1.51 1.01 1.52 1.92 0 .91-.6 1.71-1.48 1.95-.18.05-18.53 5.04-27.9 9.73-.94.47-1.63 1.28-1.96 2.29-.33 1.03-.24 2.13.27 3.09.96 1.83 3.13 2.61 5.04 1.82 9.09-3.77 20.95-8.25 26.02-8.25h.12l-.06 4c-3.34-.08-12.27 2.85-24.55 7.94-1.01.42-2.05.62-3.08.62l-.01.02Z"
              fill={
                {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M137.85 182.28c-3.78 0-7.45-2.01-9.39-5.54-2.16-3.92-1.62-8.82 1.33-12.19l1.47-1.68 3.01 2.63-1.47 1.68c-1.85 2.11-2.18 5.17-.83 7.63 1.76 3.21 5.81 4.41 9.02 2.67 12.01-6.5 20.06-9.57 23.94-9.11l-.47 3.97c-2.88-.34-10.93 2.9-21.57 8.66-1.6.87-3.33 1.28-5.04 1.28Z"
              fill={
                {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M240.77 205.74c-39.81-19.17-81.44-13.88-92.88-10.51-2.82.83-5.84.2-8.1-1.68-2.34-1.95-3.52-5.04-3.07-8.05l.77-5.2 3.96.59-.77 5.2c-.25 1.64.4 3.33 1.67 4.39 1.23 1.03 2.88 1.37 4.41.92 11.83-3.48 54.8-8.97 95.75 10.74l-1.73 3.6h-.01ZM169.987 142.243l-.698 3.938 10.349 1.834.698-3.938-10.349-1.834Z"
              fill={
                {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M191.551 162.85c-10.44-5.97-15.77-22.75-15.99-23.46l3.82-1.19c.05.16 5.09 15.99 14.16 21.18l-1.99 3.47ZM163.743 148.684l-3.982.379 2.843 29.855 3.982-.379-2.843-29.855Z"
              fill={
                {
                  "payload": 4278927075,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M85.52 154.04c32.872 0 59.52-26.648 59.52-59.52S118.392 35 85.52 35 26 61.648 26 94.52s26.648 59.52 59.52 59.52Z"
              fill={
                {
                  "payload": 4289392367,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
            <RNSVGPath
              d="M82.4798 130.63c2.5626 0 4.64-2.077 4.64-4.64 0-2.563-2.0774-4.64-4.64-4.64-2.5626 0-4.64 2.077-4.64 4.64 0 2.563 2.0774 4.64 4.64 4.64ZM82.24 114.86c-.83 0-1.5-.67-1.5-1.5 0-18.43 5.9-22.29 12.15-26.38.95-.62 1.93-1.26 2.88-1.96 4.85-3.55 6.86-9.58 5.11-15.38-1.34-4.42-5.25-9.26-12.22-9.58h-.26c-.24 0-.54.01-.88-.04-4.42-.72-11.67 1.68-15.44 6.38-2.86 3.57-3.33 7.82-1.41 12.63.31.77-.07 1.64-.84 1.95-.77.31-1.64-.07-1.95-.84-2.93-7.34-.61-12.54 1.85-15.62 4.57-5.7 13.04-8.31 18.26-7.46.11.02.22 0 .33 0h.47c7.14.32 12.87 4.81 14.96 11.71 2.12 7.03-.32 14.36-6.22 18.67-1.01.74-2.03 1.4-3.01 2.05-5.79 3.79-10.79 7.06-10.79 23.87 0 .83-.67 1.5-1.5 1.5h.01Z"
              fill={
                {
                  "payload": 4278240714,
                  "type": 0,
                }
              }
              propList={
                [
                  "fill",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        style={
          {
            "opacity": 0.6,
            "position": "absolute",
            "right": 10,
            "top": 10,
          }
        }
      >
        <View
          accessibilityLabel="Chiudi il banner e non mostrarlo più"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          hitSlop={8}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View
            collapsable={false}
            jestAnimatedProps={
              {
                "value": {},
              }
            }
            jestAnimatedStyle={
              {
                "value": {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              }
            }
            jestInlineStyle={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
            nativeID="2"
            style={
              [
                {
                  "alignItems": "center",
                  "justifyContent": "center",
                },
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "transform": [
                    {
                      "scale": 1,
                    },
                  ],
                },
              ]
            }
          >
            <RNSVGSvgView
              accessibilityElementsHidden={true}
              accessibilityLabel=""
              accessible={false}
              align="xMidYMid"
              bbHeight={36}
              bbWidth={36}
              collapsable={false}
              color="#0E0F13"
              focusable={false}
              height={36}
              importantForAccessibility="no-hide-descendants"
              jestAnimatedProps={
                {
                  "value": {
                    "color": "rgba(14, 15, 19, 1)",
                  },
                }
              }
              jestAnimatedStyle={
                {
                  "value": {},
                }
              }
              meetOrSlice={0}
              minX={0}
              minY={0}
              nativeID="3"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "flex": 0,
                    "height": 36,
                    "width": 36,
                  },
                ]
              }
              vbHeight={24}
              vbWidth={24}
              width={36}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGPath
                  clipRule={0}
                  d="M16.7071 8.70711c.3905-.39053.3905-1.02369 0-1.41422-.3905-.39052-1.0237-.39052-1.4142 0L12 10.5858 8.70711 7.29289c-.39053-.39052-1.02369-.39052-1.41422 0-.39052.39053-.39052 1.02369 0 1.41422L10.5858 12l-3.29291 3.2929c-.39052.3905-.39052 1.0237 0 1.4142.39053.3905 1.02369.3905 1.41422 0L12 13.4142l3.2929 3.2929c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L13.4142 12l3.2929-3.29289Z"
                  fill={
                    {
                      "type": 2,
                    }
                  }
                  fillRule={0}
                  propList={
                    [
                      "fill",
                      "fillRule",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`ProfileMainScreenTopBanner should match snapshot for all possible results of settingsBannerToShowSelector: no banner 1`] = `null`;

exports[`ProfileMainScreenTopBanner should match snapshot for all possible results of settingsBannerToShowSelector: notifications banner 1`] = `
<View
  style={
    {
      "paddingHorizontal": 24,
    }
  }
>
  <View
    style={
      {
        "height": 16,
      }
    }
  />
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onTouchEnd={[Function]}
    testID="notifications-banner"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "borderCurve": "continuous",
            "borderRadius": 12,
            "padding": 16,
          },
          {
            "backgroundColor": "rgba(255,102,102,0.2)",
          },
        ]
      }
      nativeID="0"
      style={
        [
          {
            "borderCurve": "continuous",
            "borderRadius": 12,
            "padding": 16,
          },
          {
            "backgroundColor": "rgba(255,102,102,0.2)",
          },
          {
            "transform": [
              {
                "scale": 1,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "gap": 18,
          }
        }
      >
        <RNSVGSvgView
          accessibilityElementsHidden={true}
          accessibilityLabel=""
          accessible={false}
          align="xMidYMid"
          bbHeight={36}
          bbWidth={36}
          color="#FFD9D9"
          focusable={false}
          height={36}
          importantForAccessibility="no-hide-descendants"
          meetOrSlice={0}
          minX={0}
          minY={0}
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              {
                "flex": 0,
                "height": 36,
                "width": 36,
              },
            ]
          }
          vbHeight={24}
          vbWidth={24}
          width={36}
        >
          <RNSVGGroup
            fill={
              {
                "payload": 4278190080,
                "type": 0,
              }
            }
          >
            <RNSVGPath
              clipRule={0}
              d="M7.00702 1c-.73494 0-1.41405.39209-1.78152 1.02856L.2756 11.0274c-.36747.6365-.36747 1.4206 0 2.0571l4.9499 8.8783c.36747.6365 1.04658 1.0286 1.78152 1.0286h9.94288c.7349 0 1.414-.3921 1.7815-1.0286l4.993-8.8783c.3675-.6365.3675-1.4206 0-2.0571l-4.993-8.99884C18.3639 1.39209 17.6848 1 16.9499 1H7.00702Zm5.02608 13.5549c.5676 0 1.0283-.4601 1.0283-1.0277V5.52583c0-.56758-.4601-1.02769-1.0277-1.02769-.5676 0-1.0282.46011-1.0282 1.02769v8.00137c0 .5676.4601 1.0277 1.0276 1.0277Zm0 1.9431c.8436 0 1.5275.6839 1.5275 1.5275 0 .8436-.6839 1.5275-1.5275 1.5275-.8436 0-1.5274-.6839-1.5274-1.5275 0-.8436.6838-1.5275 1.5274-1.5275Z"
              fill={
                {
                  "type": 2,
                }
              }
              fillRule={0}
              propList={
                [
                  "fill",
                  "fillRule",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
        <View
          style={
            {
              "flex": 1,
              "marginBottom": -6,
              "marginTop": -6,
            }
          }
        >
          <View
            style={
              {
                "display": "flex",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <Text
              allowFontScaling={true}
              dynamicTypeRamp="body"
              maxFontSizeMultiplier={1.5}
              style={
                [
                  {},
                  {
                    "color": "#FFD9D9",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "400",
                    "lineHeight": 24,
                  },
                ]
              }
            >
              Attiva le notifiche push per sapere quando ricevi un messaggio su IO.
            </Text>
            <Text
              allowFontScaling={true}
              ellipsizeMode="tail"
              maxFontSizeMultiplier={1.5}
              numberOfLines={1}
              style={
                [
                  {},
                  {
                    "color": "#FFD9D9",
                    "fontFamily": "Titillio",
                    "fontSize": 16,
                    "fontStyle": "normal",
                    "fontWeight": "600",
                    "lineHeight": 20,
                  },
                ]
              }
            >
              Attiva notifiche push
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
